--- a/unique.css
+++ b/unique.css
@@ -5,6 +5,29 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
+
+
+  
+/**FOOD CARD EFFECT**/
+
+.food__card
+{
+    display: block;
+    animation: fadeIn 2s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        
+        opacity: 1;
+    }
+}
+
 /**HEADER**/
 .svg-logo{
     margin-left: 20vw;
@@ -13,6 +36,7 @@ body{
 
 .background__img{
     object-fit: cover;
+    
 }
  
 /**MAIN**/
@@ -20,6 +44,7 @@ main{
 background-color: #f6f6f6;
 border-radius: 20px 20px 0 0;
 height: 164vh;
+display: block;
 }
 
 /**MENU--2 / LA NOTE ENCHANTEE**/
@@ -28,7 +53,7 @@ height: 164vh;
     border-radius: 20px 20px 0 0;
     height: 176vh;
 }
-/**-----------**/
+
 
 .food{
     margin-left: 5vw;
@@ -51,6 +76,7 @@ margin-left: 1vw;
 }
 
 .food__card{
+    display: flex;
     border: 2px solid #fff;
     border-radius: 20px 20px 20px 20px;
     box-shadow: 0 5px 10px #CDCDCD;
@@ -72,6 +98,38 @@ margin-left: 1vw;
         margin-left: 70vw;
         margin-top: -3.5vh;
     }
+
+    
+    section i{
+        margin-top: 4vh;
+        color: transparent;
+        font-size: 18px;
+    }
+    section i:hover{
+        transform: rotate(360deg);
+        transition: 0.4s;
+        color: #fff;
+    }
+    .food__effect{
+        width: 60px;
+        height: 65px;
+        margin-left: 70vw;
+        margin-top: -7.5vh;
+        background-color: transparent;
+        border-radius: 0 20px 20px 0;
+        text-align: center;
+        
+    }
+
+    .food__effect:hover{
+        visibility: visible;
+        margin-left: 67vw;
+        margin-top: -7.5vh;
+        transition: 0.2s;
+        background-color: #99E2D0;
+    }
+
+    
     
     /**FOOD-CARD--2 LE-DELICE**/
 .food__card--2{
@@ -154,3 +212,185 @@ footer a{
     margin-top: -3vh;
 }
 
+
+@media screen and (min-width: 768px) {
+
+    body{
+        background: #fff ;
+    }
+    .logo{
+        margin-left: 9vw;
+        border-radius: 20px 20px 0 0;
+        width: 80vw;
+        }
+        .svg-logo{
+            margin-top: 1vh;
+            margin-left: 27vw;
+        }
+
+        /**IMAGE TABLETTE**/
+
+        .background__img{
+            width: 80vw;
+            margin-left: 9vw;
+            border-radius: 20px 20px;
+        }
+
+        /**MENU TABLETTE**/
+
+        main{
+            width: 80vw;
+            margin-left: 9vw;
+            margin-top: 1vh;
+            border-radius: 20px 20px;
+        }
+        
+        .menu{
+            height: 110vh;
+        }
+
+        .menu--2{
+            height: 120vh;
+            border-radius: 20px 20px;
+        }
+        .food__card{
+            width: 50vw;
+            height: 5vh;
+            margin-left: 10vw;
+        }
+
+        .food__card--2{
+            width: 50vw;
+            height: 5vh;
+            margin-left: 10vw;
+        }
+
+        .food__price--2{
+            margin-left: 40vw;
+            margin-top: -7vh;
+        }
+
+        .food__price{
+            margin-left: 40vw;
+        }
+
+        .btn{
+            margin-left: 20vw;
+        }
+        .btn--2{
+            margin-left: 20vw;
+        }
+
+        section i{
+            margin-top: 2vh;
+        }
+        .food__effect{
+            width: 65px;
+            height: 5.5vh;
+            margin-left: 42vw;
+            margin-top: -4.6vh;
+        }
+
+        .food__effect:hover{
+            margin-left: 39vw;
+            margin-top: -4.6vh;
+        }
+
+        /**FOOTER TABLETTE**/ 
+
+        footer{
+            width:80vw;
+            margin-left: 9vw;
+            border-radius: 20px 20px;
+            margin-top: 1vh;
+            line-height: 1.5vh;
+        }
+
+        .footer-details{
+            display: flex;
+            justify-content: space-around;
+            flex-direction: row;
+            margin-left: 0vw;
+            margin-top: 0.5vh;
+        }
+    
+}
+
+@media screen and (min-width: 1200px){
+
+    /**HEADER DESKTOP**/
+    .logo{
+        border-radius: 20px 20px 0 0;
+        width: 50vw;
+        margin-left: 25vw;
+       }
+       .svg-logo{
+        width: 19vw;
+        margin-left: 15vw;
+        margin-top: 2vh;
+    }
+
+    .background__img{
+        width: 40vw;
+        margin-left: 30vw;
+    }
+
+    /**MENU DESKTOP**/
+
+    main{
+        width: 40vw;
+        margin-left: 30vw;
+    }
+    
+    .menu{
+        height: 110vh;
+    }
+    .food__card{
+        width: 20vw;
+        margin-left: 5vw;
+        margin-right: 10vw;
+    }
+    .food__price{
+        margin-left: 15vw;
+    }
+
+    section i{
+        width: 70px;
+        height: 30px;
+        margin-top: 2vh;
+        color: transparent;
+    }
+    .food__effect{
+        width: 65px;
+        height: 5.5vh;
+        margin-left: 16vw;
+        margin-top: -4.8vh;
+    }
+
+    .food__effect:hover{
+        margin-left: 14vw;
+        margin-top: -4.8vh;
+    }
+
+    .btn--2{
+        margin-left: 12vw;
+    }
+
+    .btn{
+        margin-left: 12vw;
+    }
+    .btn__order{
+        width: 15vw;
+    }
+
+    /**DESKTOP FOOTER**/
+    footer{
+        width: 40vw;
+        height: 15vh;
+        margin-left: 30vw;
+    }
+
+    .footer-header{
+        margin-left: 4.2vh;
+    }
+}
