--- a/acceuil.css
+++ b/acceuil.css
@@ -76,11 +76,9 @@ svg circle{
 
 /**HEADER**/
 .svg-logo{
-    margin-left: 19vw;
+    width: 50%;
+    margin-left: 22vw;
     margin-bottom: 1vh;
-}
-.logo{
-    margin-left: 4vw;
 }
 
 .location{ 
@@ -91,8 +89,9 @@ svg circle{
 }
 
 .location p{
+    width: 50%;
     padding-top: 10px;
-    margin-left: 29vw;
+    margin-left: 32vw;
     font-weight: 500;
     height: 6vh;
 }
@@ -147,6 +146,9 @@ svg circle{
 }
 
 /**NAV**/
+nav{
+    padding-bottom: 0;
+}
 nav h2{
     font-size: 20px;
     margin-left: 5vw;
@@ -261,6 +263,7 @@ section{
 }
 
 .places__effect{
+    
     position: absolute;
     margin-left: 48vw;
     margin-top: -30vh;
@@ -330,7 +333,7 @@ margin-right: 2vw;
     /**MEDIA HEADER**/ 
 
     .logo{
-    margin-left: 4vw;
+    
     border-radius: 20px 20px 0 0;
     width: 85%;
     background-color: #fff;
@@ -347,7 +350,7 @@ margin-right: 2vw;
         border-radius: 20px 20px;
     }
     .location p{
-        margin-left: 28vw;
+        margin-left: 33vw;
     }
 
     .info-header{
@@ -381,6 +384,7 @@ margin-right: 2vw;
         height: 32vh;
         margin-left: 6vw;
         border-radius: 20px 20px;
+        padding-bottom: 3vh;
     }
     nav h2{
         font-size: 19px;
